<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LinerLayoutPreset"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.main.dispatcher.AddMessageFragment">

    <TextView
        style="@style/TitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/message" />

    <EditText
        android:id="@+id/textField_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/gray"
        android:hint="@string/title"
        android:lines="1"
        android:padding="10dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/textField_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/gray"
        android:gravity="start"
        android:hint="@string/message"
        android:lines="10"
        android:padding="10dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button_create_message"
        style="@style/Button"
        android:text="@string/createMeterPoint" />
</LinearLayout>